# backtester

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  Taskfile.yml  conanfile.py  pyproject.toml
.github/workflows/: ci.yml
docs/: building.md
include/: DataHandler.hpp  Events.hpp
include/core/: backtest_engine.hpp  event_queue.hpp
include/data_loaders/: data_loader.hpp
include/events/: event.hpp
include/strategy/: strategy.hpp
include/utils/: time_utils.hpp
src/: DataHandler.cpp  backtest_engine.cpp  event_queue.cpp  main.cpp
src/data_loaders/: data_loader.cpp
src/utils/: time_utils.cpp
tests/: test_DataHandler.cpp  test_data_loader.cpp  test_strategy.cpp
